# ded

./: README.md  pyproject.toml
ded/: __main__.py
